miniInput_curl/mini_report_curl
andy@ubuntu:~/Desktop/test598/curlMini/cs510Files/miniInput_curl$ bash bug_report_curl.sh 
-------------------------------------------------------------------------------- error case 1
main.c:4:1: error: unknown type name ‘sigjmp_buf’
 sigjmp_buf curl_jmpenv;
 ^
Translation failed (kcc_config dumped). To repeat, run this command in directory miniInput_curl:
kcc -d -c main.c -o hello1
-------------------------------------------------------------------------------- error case 2
main2.c: In function ‘main’:
main2.c:6:11: warning: implicit declaration of function ‘clock_gettime’ [-Wimplicit-function-declaration]
   if(0 == clock_gettime(CLOCK_MONOTONIC, &tsnow)) {
           ^
main2.c:6:25: error: ‘CLOCK_MONOTONIC’ undeclared (first use in this function)
   if(0 == clock_gettime(CLOCK_MONOTONIC, &tsnow)) {
                         ^
main2.c:6:25: note: each undeclared identifier is reported only once for each function it appears in
Translation failed (kcc_config dumped). To repeat, run this command in directory miniInput_curl:
kcc -d -c main2.c -o hello2
-------------------------------------------------------------------------------- error case 3
main3.c:6:20: error: field ‘old_pipe_act’ has incomplete type
   struct sigaction old_pipe_act;// here will be one error1
                    ^
main3.c: In function ‘test1’:
main3.c:13:18: error: storage size of ‘action’ isn’t known
 struct sigaction action; // here will be one error2
                  ^
main3.c: In function ‘test’:
main3.c:16:38: error: invalid application of ‘sizeof’ to incomplete type ‘struct sigaction’
  memset(&ig->old_pipe_act, 0, sizeof(struct sigaction)); // here will be one error3
                                      ^
main3.c: In function ‘test2’:
main3.c:3:23: error: ‘strdup’ undeclared (first use in this function)
 #define system_strdup strdup // here will be  error4
                       ^
main3.c:19:60: note: in expansion of macro ‘system_strdup’
  curl_strdup_callback Curl_cstrdup = (curl_strdup_callback)system_strdup;// here to help generate error4
                                                            ^
main3.c:3:23: note: each undeclared identifier is reported only once for each function it appears in
 #define system_strdup strdup // here will be  error4
                       ^
main3.c:19:60: note: in expansion of macro ‘system_strdup’
  curl_strdup_callback Curl_cstrdup = (curl_strdup_callback)system_strdup;// here to help generate error4
                                                            ^
Translation failed (kcc_config dumped). To repeat, run this command in directory miniInput_curl:
kcc -d -c main3.c -o hello3
use gcc for comparision
-------------------------------------------------------------------------------- gcc case 1
success
-------------------------------------------------------------------------------- gcc case 2
success
-------------------------------------------------------------------------------- gcc case 3
success

